# prompt-injection-firewall

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  action.yml  docker-compose.yml  pyproject.toml
.claude/commands/: scan-data.md
.github/workflows/: injection-scan.yml
dashboard/: Dockerfile  README.md  package-lock.json
dashboard/app/: page.tsx
dashboard/app/components/: EventDetailPanel.tsx
dashboard/lib/: api.ts
src/pif/: cli.py  db.py  models.py  proxy.py
src/pif/detection/: engine.py  heuristics.py  semantic.py
src/pif/detection/corpus/: benign.jsonl  injections.jsonl
tasks/: todo.md
tests/: conftest.py  test_engine.py  test_heuristics.py  test_proxy.py  test_semantic.py
